packages/svelte/tests/validator/samples/component-name-lowercase/input.svelte
<script>
	import thisShouldWarnMe from './MyComponent.svelte';
	import { form } from './form';
	let i;
	form;
</script>

<thisShouldWarnMe></thisShouldWarnMe>
<i></i>
<form></form>
