packages/svelte/tests/compiler-errors/samples/dollar-binding-import/main.svelte
<script>
	import { $ } from './somewhere';
</script>
